--- a/TheDiskmag.Model/TheDiskmag.Model.csproj
+++ b/TheDiskmag.Model/TheDiskmag.Model.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Article.cs" />
-    <Compile Include="Articles.cs" />
+    <Compile Include="Diskmag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
